// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment renders default 1`] = `
<div
  className="Comment mb-4 d-flex"
>
  <div
    className="Comment-avatar mr-3"
  >
    <img
      alt="Foobar"
      className="rounded Comment-avatar"
      src="https://a18.t26.net/avatares/2/3/4/5/120x120_nr_23454008.jpg?888730"
    />
  </div>
  <div
    className="Comment-content"
  >
    <h6
      className="Comment-author"
    >
      <Link
        onClick={[Function]}
        replace={false}
        to="/u/Foobar"
      >
        Foobar
      </Link>
      <TimeAgo
        className="Comment-meta-created"
        component="time"
        date={1513920502005}
        formatter={[Function]}
        live={true}
        maxPeriod={Infinity}
        minPeriod={0}
        now={[Function]}
      />
    </h6>
    <div
      className="Comment-body mb-3"
      dangerouslySetInnerHTML={
        Object {
          "__html": "I am a text comment",
        }
      }
    />
    <p
      className="mb-1"
    >
      <button
        className="btn btn-sm btn-light mr-3"
      >
        RESPONDER
      </button>
      <button
        className="btn btn-sm btn-light mr-3"
      >
        <i
          className="far fa-thumbs-up"
        />
         
      </button>
      <button
        className="btn btn-sm btn-light mr-3"
      >
        <i
          className="far fa-thumbs-down"
        />
         
      </button>
    </p>
  </div>
</div>
`;

exports[`Comment renders with replies 1`] = `
<div
  className="Comment mb-4 d-flex"
>
  <div
    className="Comment-avatar mr-3"
  >
    <img
      alt="Foobar"
      className="rounded Comment-avatar"
      src="https://a18.t26.net/avatares/2/3/4/5/120x120_nr_23454008.jpg?888730"
    />
  </div>
  <div
    className="Comment-content"
  >
    <h6
      className="Comment-author"
    >
      <Link
        onClick={[Function]}
        replace={false}
        to="/u/Foobar"
      >
        Foobar
      </Link>
      <TimeAgo
        className="Comment-meta-created"
        component="time"
        date={1513920502005}
        formatter={[Function]}
        live={true}
        maxPeriod={Infinity}
        minPeriod={0}
        now={[Function]}
      />
    </h6>
    <div
      className="Comment-body mb-3"
      dangerouslySetInnerHTML={
        Object {
          "__html": "I am a text comment",
        }
      }
    />
    <p
      className="mb-1"
    >
      <button
        className="btn btn-sm btn-light mr-3"
      >
        RESPONDER
      </button>
      <button
        className="btn btn-sm btn-light mr-3"
      >
        <i
          className="far fa-thumbs-up"
        />
         
      </button>
      <button
        className="btn btn-sm btn-light mr-3"
      >
        <i
          className="far fa-thumbs-down"
        />
         
      </button>
    </p>
    <button
      className="btn btn-link text-dark Comment-replies-toggler"
      onClick={[Function]}
    >
      <span>
        Ver 2 respuestas
         
        <i
          className="fa fa-chevron-down"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`Comment renders with reply 1`] = `
<div
  className="Comment mb-4 d-flex"
>
  <div
    className="Comment-avatar mr-3"
  >
    <img
      alt="Foobar"
      className="rounded Comment-avatar"
      src="https://a18.t26.net/avatares/2/3/4/5/120x120_nr_23454008.jpg?888730"
    />
  </div>
  <div
    className="Comment-content"
  >
    <h6
      className="Comment-author"
    >
      <Link
        onClick={[Function]}
        replace={false}
        to="/u/Foobar"
      >
        Foobar
      </Link>
      <TimeAgo
        className="Comment-meta-created"
        component="time"
        date={1513920502005}
        formatter={[Function]}
        live={true}
        maxPeriod={Infinity}
        minPeriod={0}
        now={[Function]}
      />
    </h6>
    <div
      className="Comment-body mb-3"
      dangerouslySetInnerHTML={
        Object {
          "__html": "I am a text comment",
        }
      }
    />
    <p
      className="mb-1"
    >
      <button
        className="btn btn-sm btn-light mr-3"
      >
        RESPONDER
      </button>
      <button
        className="btn btn-sm btn-light mr-3"
      >
        <i
          className="far fa-thumbs-up"
        />
         
      </button>
      <button
        className="btn btn-sm btn-light mr-3"
      >
        <i
          className="far fa-thumbs-down"
        />
         
      </button>
    </p>
    <button
      className="btn btn-link text-dark Comment-replies-toggler"
      onClick={[Function]}
    >
      <span>
        Ver respuesta
         
        <i
          className="fa fa-chevron-down"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`Comment renders with visible replies 1`] = `
<div
  className="Comment mb-4 d-flex"
>
  <div
    className="Comment-avatar mr-3"
  >
    <img
      alt="Foobar"
      className="rounded Comment-avatar"
      src="https://a18.t26.net/avatares/2/3/4/5/120x120_nr_23454008.jpg?888730"
    />
  </div>
  <div
    className="Comment-content"
  >
    <h6
      className="Comment-author"
    >
      <Link
        onClick={[Function]}
        replace={false}
        to="/u/Foobar"
      >
        Foobar
      </Link>
      <TimeAgo
        className="Comment-meta-created"
        component="time"
        date={1513920502005}
        formatter={[Function]}
        live={true}
        maxPeriod={Infinity}
        minPeriod={0}
        now={[Function]}
      />
    </h6>
    <div
      className="Comment-body mb-3"
      dangerouslySetInnerHTML={
        Object {
          "__html": "I am a text comment",
        }
      }
    />
    <p
      className="mb-1"
    >
      <button
        className="btn btn-sm btn-light mr-3"
      >
        RESPONDER
      </button>
      <button
        className="btn btn-sm btn-light mr-3"
      >
        <i
          className="far fa-thumbs-up"
        />
         
      </button>
      <button
        className="btn btn-sm btn-light mr-3"
      >
        <i
          className="far fa-thumbs-down"
        />
         
      </button>
    </p>
    <button
      className="btn btn-link text-dark Comment-replies-toggler"
      onClick={[Function]}
    >
      <span>
        Ocultar respuestas 
        <i
          className="fa fa-chevron-up"
        />
      </span>
    </button>
    <div
      className="Comment-replies mt-4"
    >
      <Comment
        attachment={null}
        body="I am a reply comment"
        created={1513920502005}
        downvotes={0}
        id="53675147"
        key="53675147"
        owner={
          Object {
            "avatar": "https://a18.t26.net/avatares/2/3/4/5/120x120_nr_23454008.jpg?888730",
            "firstname": "Foo",
            "id": "l2m1j",
            "lastname": "Bar",
            "type": "user:summary",
            "username": "Foobar",
          }
        }
        state={Object {}}
        type="comment"
        upvotes={0}
      />
      <Comment
        attachment={null}
        body="I am a reply comment"
        created={1513920502005}
        downvotes={0}
        id="53675146"
        key="53675146"
        owner={
          Object {
            "avatar": "https://a18.t26.net/avatares/2/3/4/5/120x120_nr_23454008.jpg?888730",
            "firstname": "Foo",
            "id": "l2m1j",
            "lastname": "Bar",
            "type": "user:summary",
            "username": "Foobar",
          }
        }
        state={Object {}}
        type="comment"
        upvotes={0}
      />
    </div>
  </div>
</div>
`;
